Adding Analysis to answer question 1 and 3 Adding chuck code comments to explain code

--- a/index.Rmd
+++ b/index.Rmd
@@ -114,7 +114,7 @@ The data in the tidytuesday package only contains yearly totals from 2016-2018. 
 
 ##  Which countries have the highest production of sustainable energy based on energy types? 
 
-
+To assess which countries lead in renewable energy production we have used the energy_types table to make a bar plot shown below. The bar plot shows the average production of renewable energy in the positive y-axis and average conventional thermal energy on the negative y-axis. The average across the 3 years was used as the individual plots for 2016-2018 did not show much variation due to the relatively short period of time. From the plot we can see France, Germany, Spain, Norway and Sweden lead Europe in the production of renewable energy, with France producing almost an average 500,000 GWh a year with Nuclear making up the majority of the renewable energy production. France also has a significantly small level of conventional thermal energy production compared to renewable energy. Although Germany is second leading producer of renewable energy they are also the leading European producer of conventional thermal energy producing almost 363,000 GWh of energy per year.   
 
 
 ```{r energy_types_2018_plot,include=FALSE}
@@ -140,22 +140,22 @@ energy_types %>%
 
 ```{r average_production_plot }
 average_production_plot <- energy_types %>%
-  filter(type != "Pumped hydro power") %>%
+  filter(type != "Pumped hydro power") %>% # filtering out pumped hydro power which is already included as hydro power 
   group_by(country_name,type) %>%
-  summarise(average_energy = mean(energy)) %>%
+  summarise(average_energy = mean(energy)) %>% # calculating the mean energy production across the 3 years 
   pivot_wider(id_cols = country_name,
               names_from = type,
-              values_from = average_energy) %>%
-  mutate(Total_Renewable = Nuclear + Hydro + Wind + Solar + Geothermal + Other) %>%
-  mutate(`Conventional thermal` = -`Conventional thermal`) %>%
+              values_from = average_energy) %>% # making the energy types into separate columns to allow manipulation of variables
+  mutate(Total_Renewable = Nuclear + Hydro + Wind + Solar + Geothermal + Other) %>% # calculating the total renewable energy production 
+  mutate(`Conventional thermal` = -`Conventional thermal`) %>% # making conventional thermal energy into a negative value 
   pivot_longer(cols = -c(country_name,Total_Renewable),
                names_to = "Energy Type",
-               values_to = "value") %>%
-  ggplot(aes(x = reorder(country_name,-Total_Renewable),
-             y = value,
+               values_to = "value") %>% #converting the tibble back into long form to allow plotting 
+  ggplot(aes(x = reorder(country_name,-Total_Renewable), # reordering the country names by total renewable energy production 
+             y = value, 
              fill = `Energy Type`)) +
   geom_col() +
-  theme(axis.text.x = element_text(angle = 90)) +
+  theme(axis.text.x = element_text(angle = 90)) + #rotating x axis to values do not overlap 
   labs(title = "Average Renewable vs Non-Renewable Energy Production from 2016-2018",
        x = "",
        y = "Energy in GWh(Gigawatt hours)")
@@ -168,41 +168,47 @@ ggplotly(average_production_plot)
 
 ```{r yearly_production_plot}
 yearly_production_plot <- energy_types %>%
-  filter(level != "Level 2") %>%
+  filter(level != "Level 2") %>% # filtering out pumped hydro power which is already included as hydro power 
   group_by(type,year) %>%
-  summarise(total = sum(energy)) %>%
+  summarise(total = sum(energy)) %>% # calculating total energy production 
   pivot_wider(id_cols = year,
               names_from = type,
-              values_from = total) %>%
-  mutate(`Total Renewable` = Geothermal + Hydro + Nuclear + Other + Solar + Wind) %>%
+              values_from = total) %>% # making energy types into columns to allow manipulation of values 
+  mutate(`Total Renewable` = Geothermal + Hydro + Nuclear + Other + Solar + Wind) %>% # calculating total renewable energy 
   pivot_longer(cols = -year,
                names_to = "type",
-               values_to = "total") %>%
+               values_to = "total") %>% # converting back to long form to allow plotting 
   ggplot(aes(x = reorder(type,-total),
              y = total,
              fill = type)) +
   geom_col() +
   facet_wrap(~year) +
-  theme(axis.text.x = element_text(angle = 90),
-        axis.title.y = element_text(vjust=1)) +
+  theme(axis.text.x = element_text(angle = 90), #rotating the x axis to prevent values overlapping 
+        axis.title.y = element_text(vjust=1)) + #moving the y axis labels to prevent the text overlapping the y axis values 
   labs(title = "Total Energy Production by Type and Year",
        x = "",
        y = "Total energy production in GWh (Gigawatt hours)")
 
 ```
 
-
+To look closer at European energy production across the 3 years the following plots shows the breakdown of the total production of each energy type for each year. For comparability between total renewable and non-renewable energy production a total renewable column is added. From the graph we can see the production of renewable energy exceeds the production thermal energy across all years. Notably nuclear energy leads the production of renewable energy with France being a leading producer.Conventional thermal energy still however contributes to just under 50% of energy production. From the first plot, although there are several countries with renewable energy greatly exceeding fossil fuels several countries such as Germany, United Kingdom, Italy and Turkey show high levels of conventional thermal energy production.   
 
 ```{r yearly_production_plotly}
-ggplotly(yearly_production_plot)
+ggplotly(yearly_production_plot) #outputting yearly_production_plot as a plotly 
 ```
 
 
 ## How do energy imports vs exports compare between countries in Europe from 2016-2018?
 
+Per Our World Data Europe only makes up 15% of the total World Energy Consumption (Our World Data, 2019). Therefore, to assess the global impact of Europe's renewable energy production we are interested in assessing the energy imports and exports of each country. Using the country_totals we have created the plot below showing the average exports on the positive y-axis and imports on the negative y-axis for each country across 2016-2018. Further points were added to visualize the net export less imports with the size of the point representing the total net production. We have decided to use the average across 2016-2018 as there is not a significant change in energy exports and imports across the 3 years.
+
+From the visualization we can see Germany, France, Sweden, Norway and Czechia are the leading 5 countries in net exports less imports. Furthermore from the first visualization these countries lead Europe in the production of renewable energy with Germany and France being Europe's largest total net producer of energy showing signs of not only the production of renewable energy for local use but net exportation of renewable energy also. Further, from the visualization we can see Italy, Finland, United, Kingdom, Hungry and Belgium lead in net imports (imports greater than exports) in Europe.
 
 
-```{r ,include=FALSE}
+
+
+```{r export_import_plot_2018, include=FALSE}
+# export vs imports plot for 2018
 country_totals %>%
   filter(year == "2018") %>%
   select(country_name,type,energy) %>%
@@ -225,23 +231,24 @@ country_totals %>%
 
 ```{r export_import_plot}
 export_import_plot <- country_totals %>%
+  replace_na(list(energy = 0)) %>% #replacing NA values with 0 
   group_by(country_name,type) %>%
-  summarise(average = mean(energy)) %>%
+  summarise(average = mean(energy)) %>% # calculating the average production levels for each year 
   pivot_wider(id_cols = country_name,
               names_from = type,
-              values_from = average) %>%
-  mutate(Imports = -Imports) %>%
-  select(country_name,Exports,Imports,`Total net production`) %>%
-  mutate(net_import_export = Exports + Imports) %>%
-  pivot_longer(cols = -c(country_name,`Total net production`, net_import_export),
+              values_from = average) %>% # converting to wide form to allow manipulation of variables 
+  mutate(Imports = -Imports) %>% # making imports a negative value to allow plotting 
+  select(country_name,Exports,Imports,`Total net production`) %>% # selecting relevant variables for plotting 
+  mutate(net_import_export = Exports + Imports) %>% # calculating net export-imports 
+  pivot_longer(cols = -c(country_name,`Total net production`, net_import_export), # converting back to long form the allow plotting 
                names_to = "Type",
                values_to = "Energy") %>%
-  ggplot(aes(x = reorder(country_name,-net_import_export))) +
+  ggplot(aes(x = reorder(country_name,-net_import_export))) + #reordering the countries by net export-imports to allow comparability 
   geom_col(aes(y = Energy,
                fill = Type)) +
-  geom_point(aes(y = net_import_export,
-                 size = `Total net production`)) +
-  theme(axis.text.x = element_text(angle = 90)) +
+  geom_point(aes(y = net_import_export, #adding a point for the next export import
+                 size = `Total net production`)) + #changing the size of points to represent the total net production 
+  theme(axis.text.x = element_text(angle = 90)) + # rotating the x axis text to prevent text to overlap 
   labs(x = "",
        y = "Energy in GWh (Gigawatt hours)",
        title = "Average Export and Imports by Country 2016-2018")
@@ -251,16 +258,20 @@ export_import_plot <- country_totals %>%
 ggplotly(export_import_plot)
 ```
 
+To look at Europe's net export-imports as a whole the table below shows summary of the total energy production levels across each year. From the table in 2016 and 2017 Europe is at a net export but in 2018 they are at a net import. This drop in 2018 is due to the spike in imports and drop in export in 2018. It should be noted there is a drop in total net production in 2018 suggesting reduced energy consumption supporting reduction of consumption of fossil fuels.    
+
+
+
 ```{r net_export_kable}
 country_totals %>%
-  replace_na(list(energy = 0)) %>%
+  replace_na(list(energy = 0)) %>% # replacing NA values with o 
   group_by(type,year) %>%
-  summarise(total = sum(energy)) %>%
+  summarise(total = sum(energy)) %>% # calculating the total energy production 
   pivot_wider(id_cols = year,
               names_from = type,
-              values_from = total) %>%
-  mutate(`Net export-imports` = Exports - Imports) %>%
-  select(year, `Total net production`, `Energy supplied`, `Energy absorbed by pumping`, Exports, Imports, `Net export-imports`) %>%
+              values_from = total) %>% # making energy types into columns
+  mutate(`Net export-imports` = Exports - Imports) %>% # calculating net exports-imports 
+  select(year, `Total net production`, `Energy supplied`, `Energy absorbed by pumping`, Exports, Imports, `Net export-imports`) %>% #reordering the columns 
   kable() %>%
   kable_styling()
 ```
